--- a/3e/Arithmétique.html
+++ b/3e/Arithmétique.html
@@ -1,22 +1,35 @@
 ﻿<html>
     <head>
-        <link rel="stylesheet" type="text/css" href="base.css">
+        <link rel="stylesheet" type="text/css" href="../index.css">
+        <script src="../MenuSetup.js"></script>
     </head>
-    <body>
-    <div style="height: 50px;"></div>
-    <p class="soustitre">
-        Niveau 3ème :
-    </p>
-    <h1><b><u>
-        Arithmétique
-    </h1></b></u>
-    <ul>Sélectionner la compétence à travailler</ul>
-    <li><a class="button" href="Arithmétique/Décomposer un nombre en produits de facteurs premiers.html">Décomposer un nombre en produits de facteurs premiers</a></li>
-    <li><a class="button" href="Arithmétique/Déterminer si un nombre est premier.html">Déterminer si un nombre est premier</a></li>
-    <li><a class="button" href="Arithmétique/Simplifier une fraction pour la rendre irréductible.html">Simplifier une fraction pour la rendre irréductible</a></li>
-    <li><a class="button" href="Arithmétique/Résoudre des problèmes relevant de la divisibilité.html">Résoudre des problèmes relevant de la divisibilité</a></li>
-    <li><a class="button" href="Arithmétique/Utiliser les égalités de fractions.html">Utiliser les égalités de fractions</a></li>
-    <div style="height: 50px;"></div>
-    <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
+    <body onload="CreateSidePanel(document, true);">
+
+        <!-- Side Panel -->
+        <div id="Sidepanel" class="sidepanel" onload="CreateSidePanel(document)">
+            <a href="#">Menu principal</a>
+            <a href="#">Services</a>
+            <a href="#">Clients</a>
+            <a href="#">Contact</a>
+        </div>
+        <button id="buttonSidepanel" class="openbtn" onclick="ChangeNav(document)">☰</button>
+        <!-- Fin Side Panel -->
+
+        <div style="height: 50px;"></div>
+        <p class="soustitre">
+            Niveau 3ème :
+        </p>
+        <h1><b><u>
+            Arithmétique
+        </h1></b></u>
+        <ul>Sélectionner la compétence à travailler
+            <li><a class="button" href="Arithmétique/Décomposer un nombre en produits de facteurs premiers.html">Décomposer un nombre en produits de facteurs premiers</a></li>
+            <li><a class="button" href="Arithmétique/Déterminer si un nombre est premier.html">Déterminer si un nombre est premier</a></li>
+            <li><a class="button" href="Arithmétique/Simplifier une fraction pour la rendre irréductible.html">Simplifier une fraction pour la rendre irréductible</a></li>
+            <li><a class="button" href="Arithmétique/Résoudre des problèmes relevant de la divisibilité.html">Résoudre des problèmes relevant de la divisibilité</a></li>
+            <li><a class="button" href="Arithmétique/Utiliser les égalités de fractions.html">Utiliser les égalités de fractions</a></li>
+        </ul>
+        <div style="height: 50px;"></div>
+        <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
     </body>
 </html>
