--- a/3e/Arithmétique/Utiliser les égalités de fractions.html
+++ b/3e/Arithmétique/Utiliser les égalités de fractions.html
@@ -1,5 +1,6 @@
 ﻿<head>
-    <link rel="stylesheet" type="text/css" href="base.css">
+    <link rel="stylesheet" type="text/css" href="../../index.css">
+    <script src="../../MenuSetup.js"></script>
     <script src="script.js"></script>
     <script>
         var nbr = 4;
@@ -116,8 +117,27 @@
             }
         }
     </script>
+    <style>
+        td{
+            border-style: none;
+            padding: 0px;
+        }
+        div{
+            display: block;
+        }
+    </style>
 </head>
-<body onload="Recommencer();">
+<body onload="Recommencer(); CreateSidePanel(document, true);">
+
+    <!-- Side Panel -->
+    <div id="Sidepanel" class="sidepanel" onload="CreateSidePanel(document)">
+        <a href="#">Menu principal</a>
+        <a href="#">Services</a>
+        <a href="#">Clients</a>
+        <a href="#">Contact</a>
+    </div>
+    <button id="buttonSidepanel" class="openbtn" onclick="ChangeNav(document)">☰</button>
+    <!-- Fin Side Panel -->
     <div style="height: 50px;"></div>
     <h1><b><u>
         Utiliser les égalités de fractions.
