--- a/3e/Statistiques.html
+++ b/3e/Statistiques.html
@@ -1,21 +1,34 @@
 ﻿<html>
     <head>
-        <link rel="stylesheet" type="text/css" href="base.css">
+        <link rel="stylesheet" type="text/css" href="../index.css">
+        <script src="../MenuSetup.js"></script>
     </head>
-    <body>
-    <div style="height: 50px;"></div>
-    <p class="soustitre">
-        Niveau 3ème :
-    </p>
-    <h1><b><u>
-        Statistiques
-    </h1></b></u>
-    <ul>Sélectionner la compétence à travailler</ul>
-    <li><a class="button" href="Statistiques/Calculer une Moyenne.html">Calculer une Moyenne</a></li>
-    <li><a class="button" href="Statistiques/Calculer une Moyenne Pondérée.html">Calculer une Moyenne Pondérée</a></li>
-    <li><a class="button" href="Statistiques/Calculer une Médiane.html">Calculer une Médiane</a></li>
-    <li><a class="button" href="Statistiques/Calculer une Etendue.html">Calculer une Etendue</a></li>
-    <div style="height: 50px;"></div>
-    <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
+    <body onload="CreateSidePanel(document, true);">
+
+        <!-- Side Panel -->
+        <div id="Sidepanel" class="sidepanel" onload="CreateSidePanel(document)">
+            <a href="#">Menu principal</a>
+            <a href="#">Services</a>
+            <a href="#">Clients</a>
+            <a href="#">Contact</a>
+        </div>
+        <button id="buttonSidepanel" class="openbtn" onclick="ChangeNav(document)">☰</button>
+        <!-- Fin Side Panel -->
+        
+        <div style="height: 50px;"></div>
+        <p class="soustitre">
+            Niveau 3ème :
+        </p>
+        <h1><b><u>
+            Statistiques
+        </h1></b></u>
+        <ul>Sélectionner la compétence à travailler
+            <li><a class="button" href="Statistiques/Calculer une Moyenne.html">Calculer une Moyenne</a></li>
+            <li><a class="button" href="Statistiques/Calculer une Moyenne Pondérée.html">Calculer une Moyenne Pondérée</a></li>
+            <li><a class="button" href="Statistiques/Calculer une Médiane.html">Calculer une Médiane</a></li>
+            <li><a class="button" href="Statistiques/Calculer une Etendue.html">Calculer une Etendue</a></li>
+        </ul>
+        <div style="height: 50px;"></div>
+        <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
     </body>
 </html>
