--- a/3e/Statistiques/Calculer une moyenne pondérée.html
+++ b/3e/Statistiques/Calculer une moyenne pondérée.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="base.css">
+    <link rel="stylesheet" type="text/css" href="../../index.css">
+    <script src="../../MenuSetup.js"></script>
     <script src="script.js"></script>
     <script>
         var values;
@@ -86,7 +87,18 @@
 
     </script>
 </head>
-<body onload="Recommencer();">
+<body onload="Recommencer(); CreateSidePanel(document, true);">
+
+    <!-- Side Panel -->
+    <div id="Sidepanel" class="sidepanel" onload="CreateSidePanel(document)">
+        <a href="#">Menu principal</a>
+        <a href="#">Services</a>
+        <a href="#">Clients</a>
+        <a href="#">Contact</a>
+    </div>
+    <button id="buttonSidepanel" class="openbtn" onclick="ChangeNav(document)">☰</button>
+    <!-- Fin Side Panel -->
+    
     <div style="height: 50px;"></div>
     <h1><b><u>
         Calculer une moyenne pondérée.
