--- a/4e/Calcul littéral.html
+++ b/4e/Calcul littéral.html
@@ -1,21 +1,34 @@
 ﻿<html>
     <head>
-        <link rel="stylesheet" type="text/css" href="base.css">
+        <link rel="stylesheet" type="text/css" href="../index.css">
+        <script src="../MenuSetup.js"></script>
     </head>
-    <body>
-    <div style="height: 50px;"></div>
-    <p class="soustitre">
-        Niveau 4ème :
-    </p>
-    <h1><b><u>
-        Calcul littéral
-    </h1></b></u>
-    <ul>Sélectionner la compétence à travailler</ul>
-    <li><a class="button" href="Calcul littéral/Calculer la valeur d'une expression littérale.html">Calculer la valeur d'une expression littérale</a></li>
-    <li><a class="button" href="Calcul littéral/Développer une expression littérale.html">Développer une expression littérale</a></li>
-    <li><a class="button" href="Calcul littéral/Factoriser une expression littérale.html">Factoriser une expression littérale</a></li>
-    <li><a class="button" href="Calcul littéral/Réduire une expression littérale.html">Réduire une expression littérale</a></li>
-    <div style="height: 50px;"></div>
-    <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
+    <body onload="CreateSidePanel(document, true);">
+
+        <!-- Side Panel -->
+        <div id="Sidepanel" class="sidepanel" onload="CreateSidePanel(document)">
+            <a href="#">Menu principal</a>
+            <a href="#">Services</a>
+            <a href="#">Clients</a>
+            <a href="#">Contact</a>
+        </div>
+        <button id="buttonSidepanel" class="openbtn" onclick="ChangeNav(document)">☰</button>
+        <!-- Fin Side Panel -->
+        
+        <div style="height: 50px;"></div>
+        <p class="soustitre">
+            Niveau 4ème :
+        </p>
+        <h1><b><u>
+            Calcul littéral
+        </h1></b></u>
+        <ul>Sélectionner la compétence à travailler
+            <li><a class="button" href="Calcul littéral/Calculer la valeur d'une expression littérale.html">Calculer la valeur d'une expression littérale</a></li>
+            <li><a class="button" href="Calcul littéral/Développer une expression littérale.html">Développer une expression littérale</a></li>
+            <li><a class="button" href="Calcul littéral/Factoriser une expression littérale.html">Factoriser une expression littérale</a></li>
+            <li><a class="button" href="Calcul littéral/Réduire une expression littérale.html">Réduire une expression littérale</a></li>
+        </ul>
+        <div style="height: 50px;"></div>
+        <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
     </body>
 </html>
