--- a/4e/Fractions.html
+++ b/4e/Fractions.html
@@ -1,20 +1,33 @@
 ﻿<html>
     <head>
-        <link rel="stylesheet" type="text/css" href="base.css">
+        <link rel="stylesheet" type="text/css" href="../index.css">
+        <script src="../MenuSetup.js"></script>
     </head>
-    <body>
-    <div style="height: 50px;"></div>
-    <p class="soustitre">
-        Niveau 4ème :
-    </p>
-    <h1><b><u>
-        Fractions
-    </h1></b></u>
-    <ul>Sélectionner la compétence à travailler</ul>
-    <li><a class="button" href="Fractions/Simplifier une  fraction.html">Simplifier une  fraction</a></li>
-    <li><a class="button" href="Fractions/Additionner et soustraire des fractions.html">Additionner et soustraire des fractions</a></li>
-    <li><a class="button" href="Fractions/Multiplier et diviser des fractions.html">Multiplier et diviser des fractions</a></li>
-    <div style="height: 50px;"></div>
-    <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
+    <body onload="CreateSidePanel(document, true);">
+
+        <!-- Side Panel -->
+        <div id="Sidepanel" class="sidepanel" onload="CreateSidePanel(document)">
+            <a href="#">Menu principal</a>
+            <a href="#">Services</a>
+            <a href="#">Clients</a>
+            <a href="#">Contact</a>
+        </div>
+        <button id="buttonSidepanel" class="openbtn" onclick="ChangeNav(document)">☰</button>
+        <!-- Fin Side Panel -->
+        
+        <div style="height: 50px;"></div>
+        <p class="soustitre">
+            Niveau 4ème :
+        </p>
+        <h1><b><u>
+            Fractions
+        </h1></b></u>
+        <ul>Sélectionner la compétence à travailler
+            <li><a class="button" href="Fractions/Simplifier une  fraction.html">Simplifier une  fraction</a></li>
+            <li><a class="button" href="Fractions/Additionner et soustraire des fractions.html">Additionner et soustraire des fractions</a></li>
+            <li><a class="button" href="Fractions/Multiplier et diviser des fractions.html">Multiplier et diviser des fractions</a></li>
+        </ul>
+        <div style="height: 50px;"></div>
+        <input type="button" class="backbutton" value="Retour" onclick="history.go(-1)">
     </body>
 </html>
