--- a/index.html
+++ b/index.html
@@ -95,12 +95,7 @@
     <body onload="CreateMenu(); CreateSidePanel(document);">
 
         <!-- Side Panel -->
-        <div id="Sidepanel" class="sidepanel" onload="CreateSidePanel(document)">
-            <a href="#">Menu principal</a>
-            <a href="#">Services</a>
-            <a href="#">Clients</a>
-            <a href="#">Contact</a>
-        </div>
+        <div id="Sidepanel" class="sidepanel" onload="CreateSidePanel(document)"></div>
         <button id="buttonSidepanel" class="openbtn" onclick="ChangeNav(document)">☰</button>
         <!-- Fin Side Panel -->
 
