--- a/index.html
+++ b/index.html
@@ -109,5 +109,9 @@
 
         <table class="colonnetable" id="TableMenu">
         </table>
+        
+        <div id="sfct7nab8bppngmaywk15hwrr9qsd1e8xne" style="position: fixed; right: 0; bottom: 0;"></div>
+        <script type="text/javascript" src="https://counter7.stat.ovh/private/counter.js?c=t7nab8bppngmaywk15hwrr9qsd1e8xne&down=async" async></script>
+        <br><noscript><a href="https://www.compteurdevisite.com" title="compteur de visite"><img src="https://counter7.stat.ovh/private/compteurdevisite.php?c=t7nab8bppngmaywk15hwrr9qsd1e8xne" border="0" title="compteur de visite" alt="compteur de visite"></a></noscript>
     </body>
 </html>
