--- a/6e/Nombres décimaux/Décomposition d'un nombre décimal.html
+++ b/6e/Nombres décimaux/Décomposition d'un nombre décimal.html
@@ -3,52 +3,68 @@
     <script src="../../MenuSetup.js"></script>
     <script src="script.js"></script>
     <script>
-        var values = Exercice();
+        var values;
 
 
         function Valider() {
-            console.log(values);
-            var nbr1 = document.getElementById("Rep_numerateurs").value;
-            var nbr2 = document.getElementById("Rep_denominateurs").value;
-            document.getElementById("Cor_numerateur").innerHTML = "";
-            document.getElementById("Cor_denominateur").innerHTML = "";
-            if (nbr1 == values[1] &&
-                nbr2 == values[2])
-                document.getElementById("correction1").innerHTML = "Bravo c'est correct";
-            else {
-                document.getElementById("Cor_numerateur").innerHTML = (values[1]).toString();
-                document.getElementById("Cor_denominateur").innerHTML = (values[2]).toString();
-                document.getElementById("correction1").innerHTML = "Oups, ce n'est pas la réponse attendue ...";
+            var v1 = document.getElementById("Rep_numerateurs1").value;
+            var v2 = document.getElementById("Rep_numerateurs2").value;
+            var v3 = document.getElementById("Rep_numerateurs3").value;
+            var v4 = document.getElementById("Rep_numerateurs4").value;
+            var v5 = document.getElementById("Rep_numerateurs5").value;
+            document.getElementById("Correction").style.display = "none";
+            var erreur = false;
+            if (NombreAcceptableDecomposition(v1,true))
+            {
+                if (NombreAcceptableDecomposition(v2) && 
+                    NombreAcceptableDecomposition(v3) && 
+                    NombreAcceptableDecomposition(v4) && 
+                    NombreAcceptableDecomposition(v5))
+                {
+                    if (v1+v2+v3+v4+v5 == values)
+                    {
+                        document.getElementById("correctionGlobal").innerHTML = "Bravo c'est correct";
+                    }
+                    else
+                        erreur = true;
+                }
+                else
+                    erreur = true;
             }
-			var nbr3 = document.getElementById("Rep").value;
-			document.getElementById("Cor").innerHTML = "";
-			if (nbr3 == values[5])
-				document.getElementById("correction2").innerHTML = "Bravo c'est correct";
-			else {
-				document.getElementById("Cor").innerHTML = (values[5]).toString();
-				document.getElementById("correction2").innerHTML = "Oups, ce n'est pas la réponse attendue ...";
-				}
+            else
+                erreur = true;
+
+            if (erreur)
+            {
+                document.getElementById("Correction").style.display = "inline-block";
+                document.getElementById("Cor_numerateurs0").innerHTML = values[0];
+                document.getElementById("Cor_numerateurs1").innerHTML = Math.floor(values[0]);
+                document.getElementById("Cor_numerateurs2").innerHTML = Math.floor(values[1] * 10 / values[2]) % 10;
+                document.getElementById("Cor_numerateurs3").innerHTML = Math.floor(values[1] * 100 / values[2]) % 10;
+                document.getElementById("Cor_numerateurs4").innerHTML = Math.floor(values[1] * 1000 / values[2]) % 10;
+                document.getElementById("Cor_numerateurs5").innerHTML = Math.floor(values[1] * 10000 / values[2]) % 10;
+            }
         }
 
         function Annuler() {
-			document.getElementById("nombre").value = 0;
-            document.getElementById("numerateur").value = 0;
-            document.getElementById("denominateur").value = 0;
-            document.getElementById("Cor_numerateur").innerHTML = "";
-            document.getElementById("Cor_denominateur").innerHTML = "";
-			document.getElementById("Cor").innerHTML = "";
+            document.getElementById("Rep_numerateurs1").value = 0;
+            document.getElementById("Rep_numerateurs2").value = 0;
+            document.getElementById("Rep_numerateurs3").value = 0;
+            document.getElementById("Rep_numerateurs4").value = 0;
+            document.getElementById("Rep_numerateurs5").value = 0;
+            document.getElementById("Rep_numerateurs5").value = 0;
+            document.getElementById("Correction").style.display = "none";
         }
-
 
         function Recommencer() {
             Annuler();
-            values = Exercice();
+            values = GetDecompositionDecimal();
 			document.getElementById("nombre").innerHTML = values[0].toString();
-            document.getElementById("numerateur").innerHTML = values[3].toString();
-            document.getElementById("denominateur").innerHTML = values[4].toString();
         }
 
-
+        function PremierLancement(){
+            Recommencer();
+        }
 
     </script>
     <style>
@@ -62,17 +78,14 @@
     </style>
 </head>
 
-<body onload="CreateSidePanel(document, true);">
+<body onload="PremierLancement(); CreateSidePanel(document, true);">
 
     <!-- Side Panel -->
-    <div id="Sidepanel" class="sidepanel" onload="CreateSidePanel(document)">
-        <a href="#">Menu principal</a>
-        <a href="#">Services</a>
-        <a href="#">Clients</a>
-        <a href="#">Contact</a>
-    </div>
+    <div id="Sidepanel" class="sidepanel" onload="CreateSidePanel(document)"></div>
     <button id="buttonSidepanel" class="openbtn" onclick="ChangeNav(document)">☰</button>
     <!-- Fin Side Panel -->
+
+
     <div style="height: 50px;"></div>
     <h1><b><u>
         Décomposition d'un nombre décimal
@@ -88,65 +101,95 @@
             <tr>
                 <td rowspan="2" style="width: 20; text-align: center;">
                     <p id="nombre">
-                        <script>document.write(values[0])</script>
                     </p>
                 </td>
                 <td rowspan="2" style="width: 20;"><p>  =  </p></td>
-                <td>
-                    <input class="backbutton" type="number" id="Rep_numerateurs"><br>
+                <td rowspan="2">
+                    <input class="numberbutton" type="number" id="Rep_numerateurs1"><br>
                 </td>
-                <td rowspan="2" width="30"></td>
-                <td style="text-align: center;">
-                    <p id="Cor_numerateur" style="color:#FF5555">
-                    </p>
+                <td rowspan="2" style="width: 20;"><p>  +  </p></td>
+                <td>
+                    <input class="numberbutton" type="number" id="Rep_numerateurs2"><br>
+                </td>
+                <td rowspan="2" style="width: 20;"><p>  +  </p></td>
+                <td>
+                    <input class="numberbutton" type="number" id="Rep_numerateurs3"><br>
+                </td>
+                <td rowspan="2" style="width: 20;"><p>  +  </p></td>
+                <td>
+                    <input class="numberbutton" type="number" id="Rep_numerateurs4"><br>
+                </td>
+                <td rowspan="2" style="width: 20;"><p>  +  </p></td>
+                <td>
+                    <input class="numberbutton" type="number" id="Rep_numerateurs5"><br>
                 </td>
             </tr>
             <tr>
                 <td style="border-color: white; border-style: solid none none none">
-                    <input class="backbutton" type="number" id="Rep_denominateurs"><br>
+                    <label>10</label>
                 </td>
-                <td style="border-color: white; border-style: solid none none none; text-align: center;">
-                    <p id="Cor_denominateur" style="color:#FF5555">
+                <td style="border-color: white; border-style: solid none none none">
+                    <label>100</label>
+                </td>
+                <td style="border-color: white; border-style: solid none none none">
+                    <label>1000</label>
+                </td>
+                <td style="border-color: white; border-style: solid none none none">
+                    <label >10000</label>
+                </td>
+            </tr>
+        </tbody>
+    </table><br>
+    <p>
+	</p>
+    
+    <table id="Correction" style="text-align: center;">
+        <tbody>
+            <tr>
+                <td rowspan="2" style="width: 20; text-align: center;">
+                    <p id="Cor_numerateurs0"  style="color:#FF5555">
                     </p>
+                </td>
+                <td rowspan="2" style="width: 20;"><p  style="color:#FF5555">  =  </p></td>
+                <td rowspan="2">
+                    <label  style="color:#FF5555" id="Cor_numerateurs1">10</label>
+                </td>
+                <td rowspan="2" style="width: 20;"><p  style="color:#FF5555">  +  </p></td>
+                <td>
+                    <label  style="color:#FF5555" id="Cor_numerateurs2">10</label>
+                </td>
+                <td rowspan="2" style="width: 20;"><p  style="color:#FF5555">  +  </p></td>
+                <td>
+                    <label  style="color:#FF5555" id="Cor_numerateurs3">10</label>
+                </td>
+                <td rowspan="2" style="width: 20;"><p  style="color:#FF5555">  +  </p></td>
+                <td>
+                    <label  style="color:#FF5555" id="Cor_numerateurs4">10</label>
+                </td>
+                <td rowspan="2" style="width: 20;"><p  style="color:#FF5555">  +  </p></td>
+                <td>
+                    <label  style="color:#FF5555" id="Cor_numerateurs5">10</label>
+                </td>
+            </tr>
+            <tr>
+                <td style="border-color: #FF5555; border-style: solid none none none">
+                    <label  style="color:#FF5555">10</label>
+                </td>
+                <td style="border-color: #FF5555; border-style: solid none none none">
+                    <label  style="color:#FF5555">100</label>
+                </td>
+                <td style="border-color: #FF5555; border-style: solid none none none">
+                    <label  style="color:#FF5555">1000</label>
+                </td>
+                <td style="border-color: #FF5555; border-style: solid none none none">
+                    <label  style="color:#FF5555">10000</label>
                 </td>
             </tr>
         </tbody>
     </table>
     <p>
-		<label id="correction1"></label><br>
+		<label id="correctionGlobal"></label><br>
 	</p>
-	<p>
-        <label>
-            Consigne : Donner le nombre décimal égal à cette fraction décimale
-        </label>
-    </p>
-    <table>
-        <tbody>
-            <tr>
-                <td style="text-align: center;">
-                    <p id="numerateur">
-                        <script>document.write(values[3])</script>
-                    </p>
-                </td>
-                <td rowspan="2" style="width: 20;"><p>  =  </p></td>
-                <td rowspan="2" style="width: 20;">
-                    <input class="backbutton" type="number" id="Rep"><br>
-                </td>
-                <td rowspan="2" width="30"></td>
-                <td rowspan="2" width="30" style="text-align: center;">
-                    <p id="Cor" style="color:#FF5555">
-                    </p>
-                </td>
-            </tr>
-            <tr>
-                <td style="border-color: white; border-style: solid none none none; text-align: center;">
-                    <p id="denominateur">
-                        <script>document.write(values[4])</script>
-                    </p>
-                </td>
-            </tr>
-        </tbody>
-    </table>
     <p>
         <label id="correction2"></label><br>
         <INPUT class="backbutton" TYPE="button" VALUE=" Valider " onclick="Valider()">
